# test-rustdoc-example-scraping-across-workspace-on-docrs

./: Cargo.toml
crates/test_40a48f47864a/: Cargo.toml
crates/test_40a48f47864a/src/: lib.rs
crates/test_7018a98a70c0/: Cargo.toml
crates/test_7018a98a70c0/src/: lib.rs
examples/: one.rs  two.rs
src/: lib.rs
